<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AboutFragment" >

    <TextView
        android:id="@+id/whyLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Why is this?"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/whyDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/appDesc"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/whatLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="What is this?"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/whatDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/whatDesc"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/featuresLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="Features include:"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TableLayout
        android:id="@+id/featuresTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TableRow
            android:id="@+id/feature1" >

            <TextView
                android:id="@+id/bullet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desc1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="start"
                android:text="@string/feature1"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:id="@+id/feature2" >

            <TextView
                android:id="@+id/bullet2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desc2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="start|center"
                android:text="@string/feature2"
                android:textColor="@color/black"/>
        </TableRow>

        <TableRow
            android:id="@+id/feature3" >

            <TextView
                android:id="@+id/bullet3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bullet"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/desc3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_gravity="start|center"
                android:text="@string/feature3"
                android:textColor="@color/black"/>
        </TableRow>



    </TableLayout>

    <TextView
        android:id="@+id/developers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:gravity="center"
        android:text="@string/developers"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/disclosure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/disclosure"
        android:textColor="@color/black"
        android:textSize="10sp" />

</LinearLayout>